Updated Dunemasking
GitHub Station works Fair
-FilePath explode detected and could cause bugs -temp fix instituted